test/mulberry/Language/float32_list_int_literal_error.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  var values: Tensor<Float32> = tensor.from([1, 2]);

  0
}

# CHECK: error: type mismatch
